tests/ui/imports/same-res-ambigious.fail.stderr
error[E0603]: derive macro `Embed` is private
  --> $DIR/same-res-ambigious.rs:8:28
   |
LL | #[derive(ambigious_extern::Embed)]
   |                            ^^^^^ private derive macro
   |
note: the derive macro `Embed` is defined here
  --> $DIR/auxiliary/same-res-ambigious-extern-fail.rs:16:9
   |
LL | pub use RustEmbed as Embed;
   |         ^^^^^^^^^
help: import `Embed` directly
   |
LL - #[derive(ambigious_extern::Embed)]
LL + #[derive(same_res_ambigious_extern_macro::RustEmbed)]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0603`.
